collect(Collectors.toList()) ==> toList()